--- a/scenarioA/services/my-account/MSCA/landing-page-cpp-oas-fr.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-cpp-oas-fr.html
@@ -255,6 +255,12 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
         <ul class="list-group">
           <li class="list-group-item"><a href="#a1-1">Demandes du RPC </a></li>
           <li class="list-group-item"><a href="#a1-2">Demandes de la SV/SRG </a></li>
+			
+			<li class="list-group-item"><a href="#a2-1">Telechargement de document</a></li>
+			<li class="list-group-item"><a href="#a2-2">Demande de reexamen</a></li>
+			<li class="list-group-item"><a href="#a2-3">Declaration de frequentation scolaire ou universitaire</a></li>
+			
+			
            <li class="list-group-item"><a href="#a1-6">Clause pour élever des enfants </a></li>
 			<li class="list-group-item"><a href="#a1-7">Renseignements fiscaux</a></li>
 			<li class="list-group-item"><a href="#a1-3">Visualiser/modifier mes renseignements personnels</a></li>
@@ -319,6 +325,59 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 		  </ul>
         </div>
       </div>
+		
+		<div class="panel panel-default">
+        <div class="panel-body">
+          <div class="mrgn-tp-md header-bg">
+            <h2 id="a2-1" class="mrgn-tp-0">Telechargement de document&nbsp;</h2>
+            <div class="brdr-bttm-fade"></div>
+          </div>
+          <p>Vous  pouvez télécharger les pièces justificatives pour une demande de prestations  que vous avez récemment complétée. Ce service est présentement disponible pour&nbsp;: </p>
+              <ul>
+                <li>Régime de pensions d&rsquo;invalidité;</li>
+                <li>Déclaration de fréquentation scolaire ou universitaire;</li>
+                <li>Demande de réexamen. </li>
+              </ul>
+              
+<ul class="list-unstyled list-inline">
+		    <li class="mrgn-bttm-sm"><button onclick="window.location.href = '#';" type="button" class="btn btn-default">Télécharger les documents</button></li>
+		  </ul>
+        </div>
+      </div>
+		
+		<div class="panel panel-default">
+        <div class="panel-body">
+          <div class="mrgn-tp-md header-bg">
+            <h2 id="a2-2" class="mrgn-tp-0">Demande de reexamen&nbsp;</h2>
+            <div class="brdr-bttm-fade"></div>
+          </div>
+          <p>Si vous n’êtes en désaccord avec une décision prise sur votre demande de prestation, vous pouvez faire une demande de réexamen. Vous devez faire une demande de réexamen dans les 90 jours de la date sur votre lettre de décision de Service Canada. 
+</p>
+<ul class="list-unstyled list-inline">
+		    <li class="mrgn-bttm-sm"><button onclick="window.location.href = '#';" type="button" class="btn btn-default">Demande de réexamen</button></li>
+		  </ul>
+        </div>
+      </div>
+		
+		<div class="panel panel-default">
+        <div class="panel-body">
+          <div class="mrgn-tp-md header-bg">
+            <h2 id="a2-3" class="mrgn-tp-0">Declaration de frequentation scolaire ou universitaire&nbsp;</h2>
+            <div class="brdr-bttm-fade"></div>
+          </div>
+          <p>Vous pouvez soumettre une Déclaration de fréquentation scolaire ou universitaire si :</p>
+			  <ul>
+				  <li>vous êtes entre 18 et 25 ans;</li>
+				  <li>vous avez soumis une demande de prestations pour enfant du RPC;</li>
+				  <li>vous étudiez à temps plein à un établissement d’enseignement admissible.</li>
+				  </ul>
+<ul class="list-unstyled list-inline">
+		    <li class="mrgn-bttm-sm"><button onclick="window.location.href = '#';" type="button" class="btn btn-default">Soumettre une déclaration</button></li>
+		  </ul>
+        </div>
+      </div>
+		
+		
 		<div class="panel panel-default">
         <div class="panel-body">
           <div class="mrgn-tp-md header-bg">
