--- a/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html
@@ -255,7 +255,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
           <li class="list-group-item"><a href="#a1-1">CPP Applications</a></li>
           <li class="list-group-item"><a href="#a1-2">OAS/GIS Pension Applications</a></li>
 			<li class="list-group-item"><a href="#a2-1">Document upload</a></li>
-			<li class="list-group-item"><a href="#a2-2">OAS/GIS Pension Applications</a></li>
+			<li class="list-group-item"><a href="#a2-2">Request for reconsideration</a></li>
 			<li class="list-group-item"><a href="#a2-3">Declaration of attendance at school or university</a></li>
 			
            <li class="list-group-item"><a href="#a1-6">Child-rearing provision</a></li>
@@ -331,7 +331,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 		<div class="panel panel-default">
         <div class="panel-body">
           <div class="mrgn-tp-md header-bg">
-            <h2 id="a2-2" class="mrgn-tp-0">Document upload&nbsp;</h2>
+            <h2 id="a2-1" class="mrgn-tp-0">Document upload&nbsp;</h2>
             <div class="brdr-bttm-fade"></div>
           </div>
           <br />
