--- a/scenarioA/services/my-account/MSCA/landing-page-cpp-oas-fr.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-cpp-oas-fr.html
@@ -256,9 +256,9 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
           <li class="list-group-item"><a href="#a1-1">Demandes du RPC </a></li>
           <li class="list-group-item"><a href="#a1-2">Demandes de la SV/SRG </a></li>
 			
-			<li class="list-group-item"><a href="#a2-1">Telechargement de document</a></li>
+			<!--<li class="list-group-item"><a href="#a2-1">Telechargement de document</a></li>
 			<li class="list-group-item"><a href="#a2-2">Demande de reexamen</a></li>
-			<li class="list-group-item"><a href="#a2-3">Declaration de frequentation scolaire ou universitaire</a></li>
+			<li class="list-group-item"><a href="#a2-3">Declaration de frequentation scolaire ou universitaire</a></li>-->
 			
 			
            <li class="list-group-item"><a href="#a1-6">Clause pour élever des enfants </a></li>
@@ -327,7 +327,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
         </div>
       </div>
 		
-		<div class="panel panel-default">
+		<!--<div class="panel panel-default">
         <div class="panel-body">
           <div class="mrgn-tp-md header-bg">
             <h2 id="a2-1" class="mrgn-tp-0">Telechargement de document&nbsp;</h2>
@@ -380,7 +380,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 		  </ul>
         </div>
       </div>
-		
+		-->
 		
 		<div class="panel panel-default">
         <div class="panel-body">
