--- a/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html
@@ -275,7 +275,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
           <li class="list-group-item"><a href="">Apply for my CPP survivor's pension</a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>
           <li class="list-group-item"><a href="">Apply for my CPP children's benefit</a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>
           <li class="list-group-item"><a href="">Apply for a CPP death benefit</a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>
-          <li class="list-group-item"><a href="">Apply for my OAS pension</a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>
+          <!--<li class="list-group-item"><a href="">Apply for my OAS pension</a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>-->
           <li class="list-group-item"><a href="">Apply for my Guaranteed Income Supplement</a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>
           <li class="list-group-item"><a href="">Apply for my Allowance Program</a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>
           <li class="list-group-item"><a href="">Apply for my Allowance for the Survivor Program</a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>
