--- a/scenarioA/services/my-account/MSCA/landing-page-cpp-oas-fr.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-cpp-oas-fr.html
@@ -279,7 +279,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
           
           <li class="list-group-item"><a href="">Présenter ma demande de prestations d'enfant du RPC</a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>
           <li class="list-group-item"><a href="">Présenter une demande de prestation de décès du RPC</a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>
-			<li class="list-group-item"><a href="">Présenter ma demande de Pension de la SV</a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>
+			<!--<li class="list-group-item"><a href="">Présenter ma demande de Pension de la SV</a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>-->
           <li class="list-group-item"><a href="">Présenter ma demande de supplément de revenu garanti</a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>
           <li class="list-group-item"><a href="">Présenter ma demande de programme d'Allocation</a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>
           <li class="list-group-item"><a href="">Présenter ma demande de programme d'Allocation au survivant</a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>
