--- a/scenarioA/services/my-account/MSCA/landing-page-ei-backup-fr.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-ei-backup-fr.html
@@ -321,7 +321,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
               <h2 id="a1-2" class="mrgn-tp-0">Visualiser ou modifier mes renseignements personnels&nbsp;</h2>
               <div class="brdr-bttm-fade"></div>
             </div><br />
-            <p>Dans cette section, vous pouvez consulter ou modifier votre adresse postale, numéro de téléphone, dépôt direct, langue de préférence et consulter votre code d'accès à l'assurance-emploi. Les changements peuvent être effectuées directement dans Mon dossier Service Canada – Assurance emploi seulement pendant les heures de service de votre province ou territoire.</p>
+            <p>Dans cette section, vous pouvez consulter ou modifier votre adresse postale, numéro de téléphone, dépôt direct, langue de préférence et consulter votre code d'accès à l'assurance-emploi. Les changements ne s’appliquent que pour l'assurance-emploi et peuvent être effectuées directement dans Mon dossier Service Canada – Assurance emploi seulement pendant les heures de service de votre province ou territoire.</p>
 <details>
               <summary><!--Service times-->Heures de service de votre province ou territoire</summary>
               <ul>
