--- a/scenarioA/services/my-account/MSCA/landing-page-ei.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-ei.html
@@ -323,7 +323,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
               <div class="brdr-bttm-fade"></div>
             </div>
             <br />
-            <p>In this section, you can check or modify your mailing address, telephone number, direct deposit, preferred language, and view your EI access code. Modifications can only be done directly in My Service Canada Account – EI during the hours of operation in your province or territory.</p>
+            <p>In this section, you can check or modify your mailing address, telephone number, direct deposit, preferred language, and view your EI access code. Modifications only apply for EI and can only be done directly in My Service Canada Account – EI during the hours of operation in your province or territory.</p>
 <details>
               <summary><!--Service times-->Hours of operation for your Province or Territory</summary>
               <ul>
@@ -447,7 +447,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
               <div class="brdr-bttm-fade"></div>
             </div>
             <br />
-          <p>Select Mistakes  can happen to learn how to report mistakes and changes.</p>
+          <p>Select Mistakes  can happen to learn how to report mistakes and request changes.</p>
 <ul class="list-unstyled list-inline">
 			<li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/eForm/mistakes-can-happen.html';" type="button" class="btn btn-default">Mistakes can happen</button></li>
 		  </ul>
