--- a/scenarioA/services/my-account/MSCA/landing-page-cpp-oas-backup-fr.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-cpp-oas-backup-fr.html
@@ -256,9 +256,9 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
           <li class="list-group-item"><a href="#a1-1">Demandes du RPC </a></li>
           <li class="list-group-item"><a href="#a1-2">Demandes de la SV/SRG </a></li>
 			
-			<li class="list-group-item"><a href="#a2-1">Telechargement de document</a></li>
+			<li class="list-group-item"><a href="#a2-1">Telechargement de document pour le Régime de pension d’invalidité</a></li>
 			<li class="list-group-item"><a href="#a2-2">Demande de reexamen</a></li>
-			<li class="list-group-item"><a href="#a2-3">Declaration de frequentation scolaire ou universitaire</a></li>
+			<!--<li class="list-group-item"><a href="#a2-3">Declaration de frequentation scolaire ou universitaire</a></li>-->
 			
 			
            <li class="list-group-item"><a href="#a1-6">Clause pour élever des enfants </a></li>
@@ -302,11 +302,12 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
             <div class="brdr-bttm-fade"></div>
           </div>
           <br />
-          <p>Présenter une demande de prestations du RPC ou consulter les  renseignements détaillés sur l&rsquo;état de votre demande.</p>
+          <p>Présenter une demande de prestations du RPC ou consulter les  renseignements  sur l&rsquo;état de votre demande.  Vous pouvez aussi soumettre une Déclaration de fréquentation scolaire ou universitaire en vue des prestations d&rsquo;enfant du RPC.</p>
 <ul class="list-unstyled list-inline">
 		    <li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/Apply-for-CPP-benifits/CPP-Retirement-fr.html';" type="button" class="btn btn-default">Présenter ma demande de pension du RPC</button></li>
          <li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/Apply-for-CPP-benifits/CPP-disability-fr.html';" type="button" class="btn btn-default">Présenter ma demande de prestations d'invalidité du RPC</button></li>
           <li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Application-status-fr.html';" type="button" class="btn btn-default">L'état de demande</button></li>
+	<li class="mrgn-bttm-sm"><button onclick="window.location.href = '#';" type="button" class="btn btn-default">Soumettre une Déclaration de fréquentation scolaire ou universitaire</button></li>
 		  </ul>
         </div>
       </div>
@@ -330,17 +331,17 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 		<div class="panel panel-default">
         <div class="panel-body">
           <div class="mrgn-tp-md header-bg">
-            <h2 id="a2-1" class="mrgn-tp-0">Telechargement de document&nbsp;</h2>
+            <h2 id="a2-1" class="mrgn-tp-0">Telechargement de document pour le Régime de pension d’invalidité&nbsp;</h2>
             <div class="brdr-bttm-fade"></div>
           </div>
 			<br />
-          <p>Vous  pouvez télécharger les pièces justificatives pour une demande de prestations  que vous avez récemment complétée. Ce service est présentement disponible pour&nbsp;: </p>
-              <ul>
-                <li>Régime de pensions d&rsquo;invalidité;</li>
-                <li>Déclaration de fréquentation scolaire ou universitaire;</li>
-                <li>Demande de réexamen. </li>
-              </ul>
-              
+          <p>Vous pouvez  télécharger les pièces justificatives pour une demande de prestations que vous  avez récemment complétée pour le Régime de pension d&rsquo;invalidité. Ce service est seulement  disponible pour&nbsp;: </p>
+          <ul>
+            <li> les Prestations d&rsquo;invalidité du  RPC; </li>
+            <li>les Prestations d&rsquo;invalidité après-retraite du  RPC;  </li>
+            <li>les Demandes  de réexamen pour le Régime de pension d&rsquo;invalidité.</li>
+          </ul>
+          <p>Si vous téléchargez des pièces pour toutes  autres demandes de prestations, elles ne vont pas être traitées.  </p>
 <ul class="list-unstyled list-inline">
 		    <li class="mrgn-bttm-sm"><button onclick="window.location.href = '#';" type="button" class="btn btn-default">Télécharger les documents</button></li>
 		  </ul>
@@ -354,15 +355,14 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
             <div class="brdr-bttm-fade"></div>
           </div>
 			<br />
-          <p>Si vous n’êtes en désaccord avec une décision prise sur votre demande de prestation, vous pouvez faire une demande de réexamen. Vous devez faire une demande de réexamen dans les 90 jours de la date sur votre lettre de décision de Service Canada. 
-</p>
+          <p>Si vous  n&rsquo;êtes en désaccord avec une décision prise sur votre demande de prestation,  vous pouvez faire une demande de réexamen. Vous devez faire cela  dans les 90  jours de la date sur votre lettre de décision de Service Canada. </p>
 <ul class="list-unstyled list-inline">
 		    <li class="mrgn-bttm-sm"><button onclick="window.location.href = '#';" type="button" class="btn btn-default">Demande de réexamen</button></li>
 		  </ul>
         </div>
       </div>
 		
-		<div class="panel panel-default">
+		<!--<div class="panel panel-default">
         <div class="panel-body">
           <div class="mrgn-tp-md header-bg">
             <h2 id="a2-3" class="mrgn-tp-0">Declaration de frequentation scolaire ou universitaire&nbsp;</h2>
@@ -379,7 +379,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 		    <li class="mrgn-bttm-sm"><button onclick="window.location.href = '#';" type="button" class="btn btn-default">Soumettre une déclaration</button></li>
 		  </ul>
         </div>
-      </div>
+      </div> -->
 		
 		
 		<div class="panel panel-default">
