--- a/scenarioA/services/my-account/MSCA/landing-page-cpp-oas-backup-fr.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-cpp-oas-backup-fr.html
@@ -256,7 +256,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
           <li class="list-group-item"><a href="#a1-1">Demandes du RPC </a></li>
           <li class="list-group-item"><a href="#a1-2">Demandes de la SV/SRG </a></li>
 			
-			<li class="list-group-item"><a href="#a2-1">Telechargement de document pour le Régime de pension d’invalidité</a></li>
+			<li class="list-group-item"><a href="#a2-1">Téléchargement de document pour le Régime de pension d’invalidité</a></li>
 			<li class="list-group-item"><a href="#a2-2">Demande de reexamen</a></li>
 			<!--<li class="list-group-item"><a href="#a2-3">Declaration de frequentation scolaire ou universitaire</a></li>-->
 			
@@ -331,7 +331,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 		<div class="panel panel-default">
         <div class="panel-body">
           <div class="mrgn-tp-md header-bg">
-            <h2 id="a2-1" class="mrgn-tp-0">Telechargement de document pour le Régime de pension d’invalidité&nbsp;</h2>
+            <h2 id="a2-1" class="mrgn-tp-0">Téléchargement de document pour le Régime de pension d’invalidité&nbsp;</h2>
             <div class="brdr-bttm-fade"></div>
           </div>
 			<br />
