--- a/scenarioA/services/my-account/MSCA/landing-page-cpp-oas-fr.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-cpp-oas-fr.html
@@ -304,7 +304,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
           <br />
           <p>Présenter une demande de prestations du RPC ou consulter les  renseignements détaillés sur l&rsquo;état de votre demande.</p>
 <ul class="list-unstyled list-inline">
-		    <li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/Apply-for-CPP-benifits/CPP-Retirement-fr.html';" type="button" class="btn btn-default">Présenter ma demande de pension du RPC</button></li>
+		    <li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/Apply-for-CPP-benifits/CPP-Retirement-fr.html';" type="button" class="btn btn-default">Présenter ma demande de pension de retraite du RPC</button></li>
          <li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/Apply-for-CPP-benifits/CPP-disability-fr.html';" type="button" class="btn btn-default">Présenter ma demande de prestations d'invalidité du RPC</button></li>
           <li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Application-status-fr.html';" type="button" class="btn btn-default">L'état de demande</button></li>
 		  </ul>
