--- a/scenarioA/services/my-account/MSCA/landing-page-cpp-oas-backup-fr.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-cpp-oas-backup-fr.html
@@ -256,8 +256,8 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
           <li class="list-group-item"><a href="#a1-1">Demandes du RPC </a></li>
           <li class="list-group-item"><a href="#a1-2">Demandes de la SV/SRG </a></li>
 			
-			<li class="list-group-item"><a href="#a2-1">Téléchargement de document pour le Régime de pension d’invalidité</a></li>
-			<li class="list-group-item"><a href="#a2-2">Demande de reexamen</a></li>
+			<li class="list-group-item"><a href="#a2-1">Téléchargement de document pour l'invalidité du RPC</a></li>
+			<li class="list-group-item"><a href="#a2-2">Demande de réexamen</a></li>
 			<!--<li class="list-group-item"><a href="#a2-3">Declaration de frequentation scolaire ou universitaire</a></li>-->
 			
 			
@@ -304,7 +304,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
           <br />
           <p>Présenter une demande de prestations du RPC ou consulter les  renseignements  sur l&rsquo;état de votre demande.  Vous pouvez aussi soumettre une Déclaration de fréquentation scolaire ou universitaire en vue des prestations d&rsquo;enfant du RPC.</p>
 <ul class="list-unstyled list-inline">
-		    <li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/Apply-for-CPP-benifits/CPP-Retirement-fr.html';" type="button" class="btn btn-default">Présenter ma demande de pension du RPC</button></li>
+		    <li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/Apply-for-CPP-benifits/CPP-Retirement-fr.html';" type="button" class="btn btn-default">Présenter ma demande de pension de retraite du RPC</button></li>
          <li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/Apply-for-CPP-benifits/CPP-disability-fr.html';" type="button" class="btn btn-default">Présenter ma demande de prestations d'invalidité du RPC</button></li>
           <li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Application-status-fr.html';" type="button" class="btn btn-default">L'état de demande</button></li>
 	<li class="mrgn-bttm-sm"><button onclick="window.location.href = '#';" type="button" class="btn btn-default">Soumettre une Déclaration de fréquentation scolaire ou universitaire</button></li>
@@ -331,7 +331,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 		<div class="panel panel-default">
         <div class="panel-body">
           <div class="mrgn-tp-md header-bg">
-            <h2 id="a2-1" class="mrgn-tp-0">Téléchargement de document pour le Régime de pension d’invalidité&nbsp;</h2>
+            <h2 id="a2-1" class="mrgn-tp-0">Téléchargement de document pour l'invalidité du RPC&nbsp;</h2>
             <div class="brdr-bttm-fade"></div>
           </div>
 			<br />
@@ -351,7 +351,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 		<div class="panel panel-default">
         <div class="panel-body">
           <div class="mrgn-tp-md header-bg">
-            <h2 id="a2-2" class="mrgn-tp-0">Demande de reexamen&nbsp;</h2>
+            <h2 id="a2-2" class="mrgn-tp-0">Demande de réexamen&nbsp;</h2>
             <div class="brdr-bttm-fade"></div>
           </div>
 			<br />
