--- a/scenarioA/services/my-account/MSCA/landing-page-ei.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-ei.html
@@ -286,7 +286,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
         <ul>
           <li>updating your contact information</li>
           <li>modifying your direct deposit information</li>
-          <li>registering for the email notification  service (Alert me)</li>
+          <li>registering for the email notification  service (Alert Me)</li>
         </ul>
       <p>&nbsp;</p>
       <section>
@@ -298,7 +298,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
             </div>
             <br />
             <p>When you select View  my status and correspondence, you can check your latest claim&rsquo;s  status and messages.</p>
-<p>You can also receive  email notifications if you register for the Alert me service.</p>
+<p>You can also receive  email notifications if you register for the Alert Me service.</p>
 <p>If you have an  active claim, Latest claim and Payment information show details, such as start  date, weekly benefit rate, number of weeks paid and payment details.</p>
 <div>
   <div> </div>
@@ -307,7 +307,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 			  <li class="mrgn-bttm-sm">
 			    <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/latest-claim-status.html';" type="button" class="btn btn-default">View my status and correspondence</button></li>
 	<li class="mrgn-bttm-sm">
-			    <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/alert-me.html';" type="button" class="btn btn-default">Register for Alert me</button></li>
+			    <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/alert-me.html';" type="button" class="btn btn-default">Register for Alert Me</button></li>
             <li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/latest-claim-details.html';" type="button" class="btn btn-default">Latest claim</button></li>
             <li class="mrgn-bttm-sm">
               <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/EI-payment-page.html';" type="button" class="btn btn-default">Payment information</button></li>
