--- a/scenarioA/services/my-account/MSCA/landing-page-ei.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-ei.html
@@ -401,7 +401,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
               <div class="brdr-bttm-fade"></div>
             </div>
             <br />
-          <p>eForms allow you to submit new  information on your claim for: </p>
+          <p>eForms allow you to submit new information on your claim electronically  for: </p>
           <ul>
             <li>an absence from  Canada (vacation or other reason)</li>
             <li>a course or training  program</li>
