--- a/scenarioA/services/my-account/MSCA/lobby-ocf.html
+++ b/scenarioA/services/my-account/MSCA/lobby-ocf.html
@@ -267,34 +267,24 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
       </li>
     </ul>
   </section>
+	
   <section>
     <div class="mrgn-tp-lg header-bg">
       <h2>Our services</h2>
       <div class="brdr-bttm-fade"></div>
     </div>
-    <div class="row mrgn-tp-md">
-      <div class="col-xs-12 col-md-4 mrgn-bttm-md"> <a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-ei.html" class="brdr-lft brdr-rght brdr-tp brdr-bttm btn full-width lobby-link">
+    <div class="row mrgn-tp-md wb-eqht">
+      <section class="col-xs-12 col-md-4 mrgn-bttm-md"> <a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-ei.html" class="brdr-lft brdr-rght brdr-tp brdr-bttm btn full-width lobby-link">
         <div class="h3 mrgn-tp-md text-center">Employment Insurance</div>
-        </a> </div>
-      <div class="col-xs-12 col-md-4"> <a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html" class="brdr-lft brdr-rght brdr-tp brdr-bttm btn full-width lobby-link">
+        </a> </section>
+      <section class="col-xs-12 col-md-4"> <a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html" class="brdr-lft brdr-rght brdr-tp brdr-bttm btn full-width lobby-link">
         <div class="h3 mrgn-tp-md text-center">Canada Pension Plan / Old Age Security</div>
-        </a> </div>
-      <div class="col-xs-12 col-md-4"> <a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-labour.html" class="brdr-lft brdr-rght brdr-tp brdr-bttm btn full-width lobby-link">
+        </a> </section>
+      <section class="col-xs-12 col-md-4"> <a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-labour.html" class="brdr-lft brdr-rght brdr-tp brdr-bttm btn full-width lobby-link">
         <div class="h3 mrgn-tp-md text-center">Labour Program</div>
-        </a> </div>
+        </a> </section>
     </div>
 	  
-	 <!-- <div class="row mrgn-tp-md">
-      <div class="col-xs-12 col-md-6 mrgn-bttm-md"> <a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-ei.html" class="brdr-lft brdr-rght brdr-tp brdr-bttm btn full-width">
-        <div class="h3 mrgn-tp-md text-center">Employment Insurance</div>
-        </a> </div>
-      <div class="col-xs-12 col-md-6"> <a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html" class="brdr-lft brdr-rght brdr-tp brdr-bttm btn full-width">
-        <div class="h3 mrgn-tp-md text-center">Canada Pension Plan / Old Age Security</div>
-        </a> </div>
-      <div class="col-xs-12 col-md-6"> <a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-labour.html" class="brdr-lft brdr-rght brdr-tp brdr-bttm btn full-width">
-        <div class="h3 mrgn-tp-md text-center">Labour Program</div>
-        </a> </div>
-    </div>-->
 	  
   </section>
   <div class="row">
