--- a/scenarioA/services/my-account/MSCA/lobby-ocf.html
+++ b/scenarioA/services/my-account/MSCA/lobby-ocf.html
@@ -59,6 +59,26 @@
 }
 </style>
 <style type="text/css">
+	
+#simple .wb-eqht section {
+	display: inline-block;
+	margin-bottom: 15px;
+	padding: 15px;
+	width: 100%;
+}
+
+@media (min-width: 768px) {
+	#simple .wb-eqht section {
+		width: 49%;
+	}
+}
+
+@media (min-width: 1200px) {
+	#simple .wb-eqht section {
+		width: 33%;
+	}
+}	
+	
 .orange-bg {
 	background: linear-gradient(#f68b1f, #f89736);
 }
@@ -268,7 +288,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
     </ul>
   </section>
 	
-  <section>
+  <section id="simple">
     <div class="mrgn-tp-lg header-bg">
       <h2>Our services</h2>
       <div class="brdr-bttm-fade"></div>
