--- a/scenarioA/services/my-account/MSCA/lobby-ocf.html
+++ b/scenarioA/services/my-account/MSCA/lobby-ocf.html
@@ -304,9 +304,87 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
         <div class="h3 mrgn-tp-md text-center">Labour Program</div>
         </a> </section>
     </div>
-	  
-	  
   </section>
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+<div class="row wb-eqht wb-init"><!-- COLUMN 1 -->
+  <div class="col-md-4">
+    <section class="panel panel-default hght-inhrt">
+      <div class="panel-heading">Departmental Presence</div>
+      <div class="panel-body">
+        <ul>
+          <li><a href="http://blogs-blogues.prv/SM-DM/?lang=en">Deputy Ministers&rsquo; Blog</a></li>
+          <!-- <li><a href="http://service-wiki.prv/wpmu/liseanneforand/?lang=en">Service Excellence Blog</a></li>-->
+          <li><a href="/eng/iit/corporate/blogs/index.shtml">Employee Blogs</a></li>
+          <li><a href="https://www.infomedia.gc.ca/esdc-edsc/en/interoperability/feeds">NewsDesk Feeds</a></li>
+          <li><a href="https://www.infomedia.gc.ca/esdc-edsc/en">NewsDesk Mobile</a></li>
+          <li><a href="http://knowledgeportal.intra.hrsdc.gc.ca/MTPPubWelcomeCoPKP.jsp?lang=eng">Communities of Practice (Knowledge Portal)</a></li>
+          <li><a href="http://dialogue/sharepointcommunity/en-ca/Pages/Home.aspx">SharePoint Communities</a></li>
+        </ul>
+      </div>
+    </section>
+  </div>
+  <!-- END COLUMN 1 --> <!-- COLUMN 2 -->
+  <div class="col-md-4">
+    <section class="panel panel-default hght-inhrt">
+      <div class="panel-heading">
+        <h2 class="panel-title">Government of Canada Presence</h2>
+      </div>
+      <div class="panel-body">
+        <ul>
+          <li><a href="http://www.gcpedia.gc.ca/wiki/?setlang=en">GCPedia</a></li>
+          <li><a href="http://elgg.srv.gc.ca/elgg17/">GCConnex</a></li>
+          <li><a href="http://www.gcforums.gc.ca/">GCForums</a></li>
+          <li><a href="http://ircan-rican.gc.ca/">IRCan: GC's extranet</a></li>
+        </ul>
+      </div>
+    </section>
+  </div>
+  <!-- COLUMN 3 -->
+  <div class="col-md-4">
+    <section class="panel panel-default hght-inhrt">
+      <div class="panel-heading">
+        <h2 class="panel-title">Public Presence</h2>
+      </div>
+      <div class="panel-body">
+        <ul>
+          <li><a href="http://www.gcpedia.gc.ca/wiki/?setlang=en">GCPedia</a></li>
+          <li><a href="http://elgg.srv.gc.ca/elgg17/">GCConnex</a></li>
+          <li><a href="http://www.gcforums.gc.ca/">GCForums</a></li>
+          <li><a href="http://ircan-rican.gc.ca/">IRCan: GC's extranet</a></li>
+        </ul>
+      </div>
+    </section>
+  </div>
+</div>
+
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
   <div class="row">
     <aside style="padding-left:10px;">
       <div class="mrgn-tp-lg header-bg">
