--- a/scenarioA/services/my-account/MSCA/lobby-ocf.html
+++ b/scenarioA/services/my-account/MSCA/lobby-ocf.html
@@ -293,7 +293,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
       <h2>Our services</h2>
       <div class="brdr-bttm-fade"></div>
     </div>
-    <div class="row mrgn-tp-md wb-eqht">
+    <div class="row mrgn-tp-md wb-eqht wb-init">
       <section class="col-xs-12 col-md-4 mrgn-bttm-md hght-inhrt"> <a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-ei.html" class="brdr-lft brdr-rght brdr-tp brdr-bttm btn full-width lobby-link">
         <div class="h3 mrgn-tp-md text-center">Employment Insurance</div>
         </a> </section>
