--- a/scenarioA/services/my-account/MSCA/lobby-ocf.html
+++ b/scenarioA/services/my-account/MSCA/lobby-ocf.html
@@ -297,21 +297,24 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
     <div class="row wb-eqht wb-init">
 		
 	<div class="col-md-4">	
-      <section class="panel panel-default hght-inhrt"> <a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-ei.html">
+		<a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-ei.html" class="full-width">
+      <section class="panel panel-default hght-inhrt"> 
         <div class="h3 mrgn-tp-md text-center">Employment Insurance</div>
-        </a> </section>
+        </section></a> 
 	</div>	
 		
 	<div class="col-md-4">		
-      <section class="panel panel-default hght-inhrt"> <a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html" >
+		<a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html" class="full-width" >
+      <section class="panel panel-default hght-inhrt"> 
         <div class="h3 mrgn-tp-md text-center">Canada Pension Plan / Old Age Security</div>
-        </a> </section>
+         </section></a>
 	</div>
 		
 	<div class="col-md-4">		
-      <section class="panel panel-default hght-inhrt"> <a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-labour.html" >
+		<a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-labour.html" class="full-width">
+      <section class="panel panel-default hght-inhrt"> 
         <div class="h3 mrgn-tp-md text-center">Labour Program</div>
-        </a> </section>
+         </section></a>
 	</div>	
 	
     </div>
