--- a/scenarioA/services/my-account/MSCA/lobby-ocf.html
+++ b/scenarioA/services/my-account/MSCA/lobby-ocf.html
@@ -298,24 +298,24 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 		
 	<div class="col-md-4">	
 		
-      <section class="panel panel-default hght-inhrt"> 
-		  <a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-ei.html" class="full-width">
+      <section class="hght-inhrt"> 
+		  <a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-ei.html" class="brdr-lft brdr-rght brdr-tp brdr-bttm btn full-width">
         <div class="h3 mrgn-tp-md text-center">Employment Insurance</div>
        </a> </section> 
 	</div>	
 		
 	<div class="col-md-4">		
 		
-      <section class="panel panel-default hght-inhrt"> 
-        <a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html" class="full-width" >
-		  <div class="h3 mrgn-tp-md text-center">Canada Pension Plan / Old Age Security</div>
+      <section class="hght-inhrt"> 
+        <a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html" class="brdr-lft brdr-rght brdr-tp brdr-bttm btn full-width"> 		
+			<div class="h3 mrgn-tp-md text-center">Canada Pension Plan / Old Age Security</div>
         </a> </section>
 	</div>
 		
 	<div class="col-md-4">		
 		
-      <section class="panel panel-default hght-inhrt"> 
-       <a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-labour.html" class="full-width"> <div class="h3 mrgn-tp-md text-center">Labour Program</div>
+      <section class="hght-inhrt"> 
+       <a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-labour.html" class="brdr-lft brdr-rght brdr-tp brdr-bttm btn full-width"> <div class="h3 mrgn-tp-md text-center">Labour Program</div>
         </a> </section>
 	</div>	
 	
