--- a/scenarioA/services/my-account/MSCA/lobby-ocf.html
+++ b/scenarioA/services/my-account/MSCA/lobby-ocf.html
@@ -331,26 +331,51 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 	
 	
 	
-	
-<section>
-    <div class="mrgn-tp-lg header-bg">
-      <h2>Our services</h2>
-      <div class="brdr-bttm-fade"></div>
-    </div>
-	  <br />
-    <div class="row mrgn-tp-md">
-    <div class="col-xs-12 col-md-6 mrgn-bttm-md"> 
-		<a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-ei.html" class="brdr-lft brdr-rght brdr-tp brdr-bttm btn full-width">
-      <div class="h3 mrgn-tp-md text-center">Employment Insurance</div>
-      </a> </div>
-	  
-    <div class="col-xs-12 col-md-6"> 
-		<a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html" class="brdr-lft brdr-rght brdr-tp brdr-bttm btn full-width">
-      <div class="h3 mrgn-tp-md text-center">Canada Pension Plan / Old Age Security</div>
-      </a> </div>
-      
-  </div> 
-  </section>
+<section id="simple">
+	<h2>Example</h2>
+
+	<div class="wb-eqht">
+		<section>
+			<h3>Short container Short containerShort containerShort containerShort containerShort container</h3>
+			...
+		</section>
+		<section>
+			<h3>Medium container</h3>
+			...
+		</section>
+		<section>
+			<h3>Long container</h3>
+			...
+		</section>
+	</div>
+
+	<div class="wb-eqht">
+		<section>
+			<h3>Short container</h3>
+			...
+		</section>
+		<section>
+			<h3>Medium container</h3>
+			...
+		</section>
+		<section>
+			<h3>Long container</h3>
+			...
+		</section>
+		<section>
+			<h3>Short container</h3>
+			...
+		</section>
+		<section>
+			<h3>Medium container</h3>
+			...
+		</section>
+		<section>
+			<h3>Long container</h3>
+			...
+		</section>
+	</div>
+</section>
 
 	
 	
