--- a/scenarioA/services/my-account/MSCA/lobby-ocf.html
+++ b/scenarioA/services/my-account/MSCA/lobby-ocf.html
@@ -335,42 +335,30 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 	<h2>Example</h2>
 
 	<div class="wb-eqht">
-		<section>
+		<section class="brdr-lft brdr-rght brdr-tp brdr-bttm btn full-width">
 			<h3>Short container Short containerShort containerShort containerShort containerShort container</h3>
 			...
 		</section>
-		<section>
+		<section class="brdr-lft brdr-rght brdr-tp brdr-bttm btn full-width">
 			<h3>Medium container</h3>
 			...
 		</section>
-		<section>
+		<section class="brdr-lft brdr-rght brdr-tp brdr-bttm btn full-width">
 			<h3>Long container</h3>
 			...
 		</section>
 	</div>
 
 	<div class="wb-eqht">
-		<section>
-			<h3>Short container</h3>
+		<section class="brdr-lft brdr-rght brdr-tp brdr-bttm btn full-width">
+			<h3>Short containerShort container Short containerShort containerShort containerShort containerShort containerShort container Short containerShort containerShort containerShort containerShort container</h3>
 			...
 		</section>
-		<section>
+		<section class="brdr-lft brdr-rght brdr-tp brdr-bttm btn full-width">
 			<h3>Medium container</h3>
 			...
 		</section>
-		<section>
-			<h3>Long container</h3>
-			...
-		</section>
-		<section>
-			<h3>Short container</h3>
-			...
-		</section>
-		<section>
-			<h3>Medium container</h3>
-			...
-		</section>
-		<section>
+		<section class="brdr-lft brdr-rght brdr-tp brdr-bttm btn full-width">
 			<h3>Long container</h3>
 			...
 		</section>
