--- a/scenarioA/services/my-account/MSCA/lobby-ocf.html
+++ b/scenarioA/services/my-account/MSCA/lobby-ocf.html
@@ -335,33 +335,24 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 	<h2>Example</h2>
 
 	<div class="wb-eqht">
+          <a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-ei.html">
 		<section class="brdr-lft brdr-rght brdr-tp brdr-bttm btn full-width">
-			<h3>Short container Short containerShort containerShort containerShort containerShort container</h3>
-			...
-		</section>
-		<section class="brdr-lft brdr-rght brdr-tp brdr-bttm btn full-width">
-			<h3>Medium container</h3>
-			...
-		</section>
-		<section class="brdr-lft brdr-rght brdr-tp brdr-bttm btn full-width">
-			<h3>Long container</h3>
-			...
-		</section>
-	</div>
+			<h3>Employment Insurance</h3>
 
-	<div class="wb-eqht">
-		<section class="brdr-lft brdr-rght brdr-tp brdr-bttm btn full-width">
-			<h3>Short containerShort container Short containerShort containerShort containerShort containerShort containerShort container Short containerShort containerShort containerShort containerShort container</h3>
-			...
 		</section>
+	</a>
+		<a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html">
 		<section class="brdr-lft brdr-rght brdr-tp brdr-bttm btn full-width">
-			<h3>Medium container</h3>
-			...
+			<h3>Canada Pension Plan / Old Age Security</h3>
+
 		</section>
-		<section class="brdr-lft brdr-rght brdr-tp brdr-bttm btn full-width">
-			<h3>Long container</h3>
-			...
+			</a>
+		<a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-labour.html">
+			<section class="brdr-lft brdr-rght brdr-tp brdr-bttm btn full-width">
+			<h3>Labour Program</h3>
+
 		</section>
+			</a>
 	</div>
 </section>
 
