--- a/scenarioA/services/my-account/MSCA/lobby-ocf.html
+++ b/scenarioA/services/my-account/MSCA/lobby-ocf.html
@@ -297,25 +297,25 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 
 <section id="simple">
 
-	<div class="wb-eqht">
+	<div class="wb-eqht mrgn-tp-lg">
           
-		<section class="brdr-lft brdr-rght brdr-tp brdr-bttm btn full-width">
+		<section class="brdr-lft brdr-rght brdr-tp brdr-bttm btn">
 			<a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-ei.html">
-			<h3>Employment Insurance</h3>
+			<div class="h3 mrgn-tp-sm">Employment Insurance</div>
 </a>
 		</section>
 	
 		
-		<section class="brdr-lft brdr-rght brdr-tp brdr-bttm btn full-width">
+		<section class="brdr-lft brdr-rght brdr-tp brdr-bttm btn">
 		<a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html">
-			<h3>Canada Pension Plan / Old Age Security</h3>
+			<div class="h3 mrgn-tp-sm">Canada Pension Plan / Old Age Security</div>
 </a>
 		</section>
 			
 		
-			<section class="brdr-lft brdr-rght brdr-tp brdr-bttm btn full-width">
+			<section class="brdr-lft brdr-rght brdr-tp brdr-bttm btn">
 			<a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-labour.html">
-				<h3>Labour Program</h3>
+				<div class="h3 mrgn-tp-sm">Labour Program</div>
 </a>
 		</section>
 			
