--- a/scenarioA/services/my-account/MSCA/lobby-ocf.html
+++ b/scenarioA/services/my-account/MSCA/lobby-ocf.html
@@ -299,22 +299,22 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 
 	<div class="wb-eqht mrgn-tp-lg">
           
-		<section class="brdr-lft brdr-rght brdr-tp brdr-bttm btn">
-			<a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-ei.html">
+		<section>
+			<a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-ei.html" class="brdr-lft brdr-rght brdr-tp brdr-bttm btn">
 			<div class="h3 mrgn-tp-sm">Employment Insurance</div>
 </a>
 		</section>
 	
 		
-		<section class="brdr-lft brdr-rght brdr-tp brdr-bttm btn">
-		<a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html">
+		<section>
+		<a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html" class="brdr-lft brdr-rght brdr-tp brdr-bttm btn">
 			<div class="h3 mrgn-tp-sm">Canada Pension Plan / Old Age Security</div>
 </a>
 		</section>
 			
 		
-			<section class="brdr-lft brdr-rght brdr-tp brdr-bttm btn">
-			<a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-labour.html">
+			<section>
+			<a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-labour.html" class="brdr-lft brdr-rght brdr-tp brdr-bttm btn">
 				<div class="h3 mrgn-tp-sm">Labour Program</div>
 </a>
 		</section>
