--- a/scenarioA/services/my-account/MSCA/lobby-ocf.html
+++ b/scenarioA/services/my-account/MSCA/lobby-ocf.html
@@ -297,25 +297,25 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 
 <section id="simple">
 
-	<div class="wb-eqht mrgn-tp-lg">
+	<div class="wb-eqht">
           
-		<section class="col-md-4">
-			<a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-ei.html" class="brdr-lft brdr-rght brdr-tp brdr-bttm btn">
-			<div class="h3 mrgn-tp-sm">Employment Insurance</div>
+		<section class="brdr-lft brdr-rght brdr-tp brdr-bttm btn">
+			<a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-ei.html">
+			<div class="h3 mrgn-tp-md">Employment Insurance</div>
 </a>
 		</section>
 	
 		
-		<section class="col-md-4">
-		<a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html" class="brdr-lft brdr-rght brdr-tp brdr-bttm btn">
-			<div class="h3 mrgn-tp-sm">Canada Pension Plan / Old Age Security</div>
+		<section class="brdr-lft brdr-rght brdr-tp brdr-bttm btn">
+		<a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html">
+			<div class="h3 mrgn-tp-md">Canada Pension Plan / Old Age Security</div>
 </a>
 		</section>
 			
 		
-			<section class="col-md-4">
-			<a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-labour.html" class="brdr-lft brdr-rght brdr-tp brdr-bttm btn">
-				<div class="h3 mrgn-tp-sm">Labour Program</div>
+			<section class="brdr-lft brdr-rght brdr-tp brdr-bttm btn">
+			<a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-labour.html">
+				<div class="h3 mrgn-tp-md">Labour Program</div>
 </a>
 		</section>
 			
