--- a/scenarioA/services/my-account/MSCA/lobby-ocf.html
+++ b/scenarioA/services/my-account/MSCA/lobby-ocf.html
@@ -297,7 +297,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 
 <section id="simple">
 
-	<div class="wb-eqht">
+	<div class="wb-eqht mrgn-tp-lg">
           
 		<section class="brdr-lft brdr-rght brdr-tp brdr-bttm btn">
 			<a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-ei.html">
@@ -308,7 +308,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 		
 		<section class="brdr-lft brdr-rght brdr-tp brdr-bttm btn">
 		<a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html">
-			<div class="h3 mrgn-tp-md">Canada Pension Plan / Old Age Security asdfasdfsdf</div>
+			<div class="h3 mrgn-tp-md">Canada Pension Plan / Old Age Security</div>
 </a>
 		</section>
 			
