--- a/scenarioA/services/my-account/MSCA/landing-page-labour.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-labour.html
@@ -295,7 +295,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 </div>
 <ul class="list-unstyled list-inline">
 			  <li class="mrgn-bttm-sm">
-			    <button onclick="window.location.href = '#';" type="button" class="btn btn-default">View my complaint status</button></li>
+			    <button onclick="window.location.href = 'https://sds-ux.github.io/MSCA-Prototype/scenarioA/services/my-account/MSCA/labour/ocf-latest-claims.html';" type="button" class="btn btn-default">View my complaint status</button></li>
 	<li class="mrgn-bttm-sm">
 			    <button onclick="window.location.href = '#';" type="button" class="btn btn-default">File a complaint</button></li>
           </ul>
