--- a/scenarioA/services/my-account/MSCA/landing-page-labour.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-labour.html
@@ -154,10 +154,9 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
   <header role="banner">
     <div id="wb-bnr" class="container">
       <div class="row">
-        <div class="brand col-xs-9 col-sm-8 col-md-6">
-          <object type="image/svg+xml" tabindex="-1" data="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_30/assets/wmms-blk.svg">
-          </object>
-          <span class="wb-inv"> <span> Government of Canada </span> <span>/</span> <span lang="fr"> Gouvernement du Canada </span> </span> </div>
+        <div class="col-xs-6 col-md-2 text-right">
+					<object type="image/svg+xml" tabindex="-1" role="img" data="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_30/assets/wmms-blk.svg" aria-label="Symbol of the Government of Canada"></object>
+				</div>
         <section id="wb-lng" class="text-right col-xs-3 col-sm-4 col-md-6">
           <h2 class="wb-inv">Language selection</h2>
           <ul class="list-inline margin-bottom-none">
