--- a/scenarioA/services/my-account/MSCA/labour/ocf-latest-claims.html
+++ b/scenarioA/services/my-account/MSCA/labour/ocf-latest-claims.html
@@ -147,7 +147,7 @@
 	<a class="btn btn-default" href="#" role="button">Help</a><br></section>
 	
 	<main class="container" property="mainContentOfPage" role="main"><span id="pageTemplate:j_id__ctru6pc6" class="af_panelGroupLayout">
-	<h1 class="wb-inv" property="name" id="wb-cont" dir="ltr">Latest Claim Status
+	<h1 class="wb-inv" property="name" id="wb-cont" dir="ltr">Latest complaints status
 </h1>
 
 <div class="row">
