--- a/scenarioA/services/my-account/MFA/select-security-method.html
+++ b/scenarioA/services/my-account/MFA/select-security-method.html
@@ -163,7 +163,7 @@
         <div class="panel-body">
           <p>You can choose to register for multi-factor authentication later.</p>
           <p>Registering now will help protect your identity and personal information.</p>
-          <p class="text-center"><a href="/en/service-canada/service-delivery/sda-assist/msca/view-change.shtml " class=" btn btn-default text-center" role="button">Register later</a></p>
+          <p class="text-center"><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/lobby-wax.html" class=" btn btn-default text-center" role="button">Register later</a></p>
         </div>
       </section>
     </div>
