--- a/scenarioA/services/my-account/MFA/voice/enter-code.html
+++ b/scenarioA/services/my-account/MFA/voice/enter-code.html
@@ -138,7 +138,7 @@
 <p>Enter the voice security code that was sent to: (xxx) xxx-1234.</p>
 <form method="post" action="#" class="form-horizontal">
 <div class="mrgn-lft-md mrgn-rght-md">
-<div class="form-group mrgn-bttm-0"><label class="mrgn-bttm-0 required col-sm-3"> SMS code <strong class="required"> (required)</strong></label>
+<div class="form-group mrgn-bttm-0"><label class="mrgn-bttm-0 required col-sm-3"> Voice code <strong class="required"> (required)</strong></label>
 <div class="col-sm-5"><input class="form-control mrgn-bttm-lg" type="text" size="50" /></div>
 </div>
 </div>
