--- a/scenarioA/services/my-account/GCKey/sdiv.html
+++ b/scenarioA/services/my-account/GCKey/sdiv.html
@@ -225,7 +225,7 @@ a.btn-lblue:hover, a.btn-lblue:active, a.btn-lblue:focus {
       <ol class="row list-unstyled hidden-xs">
         <li class="col-md-3"><a href="#sign-up-gckey"><img src="https://canada-preview.adobecqms.net/content/dam/esdc-edsc/images/services/msca-mdsc/GCKey.png" class="center-block" alt=""><br>
         Sign up for GCKey (if you don’t have it)</a></li>
-        <li class="col-md-3"><a href="#sign-up-gckey"><img src="https://canada-preview.adobecqms.net/content/dam/esdc-edsc/images/services/msca-mdsc/GCKey.png" class="center-block" alt=""><br>
+        <li class="col-md-3"><a href="#sdiv"><img src="https://canada-preview.adobecqms.net/content/dam/esdc-edsc/images/services/msca-mdsc/request-code.png" class="center-block" alt=""><br>
           Digitally verify your identity using the SDIV solution</a></li>
         <li class="col-md-3"><a href="#register-msca"><img src="https://canada-preview.adobecqms.net/content/dam/esdc-edsc/images/services/msca-mdsc/review.png" class="center-block" alt=""><br>
           Register for MSCA with your GCKey</a></li>
@@ -239,7 +239,7 @@ a.btn-lblue:hover, a.btn-lblue:active, a.btn-lblue:focus {
     <div class="well">
       
       <ol class="row list-unstyled hidden-xs">
-        <li class="col-md-3"><a href="#request-code" class="text-center"><img src="https://canada-preview.adobecqms.net/content/dam/esdc-edsc/images/services/msca-mdsc/request-code.png" class="center-block" alt=""><br>
+        <li class="col-md-3"><a href="#request-code" class="text-center"><img src="https://www.canada.ca/content/dam/esdc-edsc/images/services/benefits/publicpensions/cpp-disability-benefit/plain-envelope-clr.png" class="center-block" alt=""><br>
           Request a PAC</a></li>
         <li class="col-md-3"><a href="#sign-up-gckey"><img src="https://canada-preview.adobecqms.net/content/dam/esdc-edsc/images/services/msca-mdsc/GCKey.png" class="center-block" alt=""><br>
           Sign up for GCKey (if you don’t have it)</a></li>
@@ -248,9 +248,21 @@ a.btn-lblue:hover, a.btn-lblue:active, a.btn-lblue:focus {
       </ol>
       
     </div>
-    <p>&nbsp;</p>
     <p>If you  already have a GCKey a PAC or want to use the SDIV solution:<br>
       <a href="/MSCA-Prototype/scenarioA/services/my-account/GCKey/sign-in.html" class="btn btn-primary">Register now</a></p>
+	  
+	  
+<h2 id="sdiv">Digitally verify your identity using the SDIV solution</h2>
+  <p>This new Simplified Digital Identity Validation (SDIV) solution will allow you to register to MSCA in a quicker and safer way. Once you have registered or logged with your GCKey credential, you will be prompted to digitally verify your identity with Verified.Me by sharing information from your financial institution.</p>
+	  
+	<p>This new real-time identity verification will allow you to access MSCA features instantly, rather then waiting 7 to 10 business days to obtain your PAC.</p>  
+	  
+	  <p>For more information, please refer to our <a href="#">SDIV solution FAQ</a> page.</p> 
+
+	  
+	  
+	  
+	  
     <h2 id="request-code">Request a PAC</h2>
   <p>A PAC is your key to accessing secure online services. Service Canada will provide you with a PAC. You need this code to register for MSCA with GCKey.</p>
   <p><strong>You can request a PAC:</strong></p>
