--- a/scenarioA/services/my-account/GCKey/sdiv.html
+++ b/scenarioA/services/my-account/GCKey/sdiv.html
@@ -208,13 +208,13 @@ a.btn-lblue:hover, a.btn-lblue:active, a.btn-lblue:focus {
     <h1 property="name" id="wb-cont" dir="ltr"> My Service Canada Account: Register with GCKey</h1>
   </div>
   <div class="mwsgeneric-base-html parbase section">
-    <p>A GCKey is a unique electronic credential issued by the Government of Canada for use with online Government services. To use GCKey to access My Service Canada Account (MSCA) you must have:</p>
+    <p>A GCKey is a unique electronic credential issued by the Government of Canada for use with online Government services. To use GCKey to access My Service Canada Account (MSCA) you must:</p>
     <ul>
-      <li>a GCKey ID</li>
-      <li>a Personal Access Code (PAC) or </li>
-      <li>use the Simplified Digital Identity Validation (SDIV) solution</li>
+      <li>have a GCKey ID</li>
+	  <li>use the new Simplified Digital Identity Validation (SDIV) solution, or</li>
+      <li>have a Personal Access Code (PAC)</li>
+      
     </ul>
-    <p>PACs are used to help validate your identity for MSCA and keep your account secure.</p>
     <p>Using GCkey, you have 2 options to register for MSCA:<br>
     </p>
 	  <h2>Option 1  (Recommended) - Register for MSCA with GCKey and the new SDIV solution</h2>
@@ -248,7 +248,7 @@ a.btn-lblue:hover, a.btn-lblue:active, a.btn-lblue:focus {
       </ol>
       
     </div>
-    <p>If you  already have a GCKey a PAC or want to use the SDIV solution:<br>
+    <p>If you  already have a GCKey, want to use the SDIV solution or have a PAC:<br>
       <a href="/MSCA-Prototype/scenarioA/services/my-account/GCKey/sign-in.html" class="btn btn-primary">Register now</a></p>
 	  
 	  
@@ -323,7 +323,7 @@ a.btn-lblue:hover, a.btn-lblue:active, a.btn-lblue:focus {
   <h2 id="register-msca">Register for MSCA with your GCKey</h2>
   <p>Are you ready to register? You will need:</p>
   <ul>
-    <li>your PAC</li>
+    <li>your PAC (or authenticate yourself with the SDIV solution)</li>
     <li>your Social Insurance Number (SIN)</li>
   </ul>
   <p><a href="https://srv136.services.gc.ca/ecas-seca/rascl/Initialize.aspx?Lang=eng&amp;Idp=https://clegc-gckey.gc.ca&amp;AppCode=MSCA_SC" class="btn btn-primary">Register now</a></p>
